--- a/ch_results.tex
+++ b/ch_results.tex
@@ -374,9 +374,8 @@ The table shows the best-fit classifier's performance across three scores on the
 			% $Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
 			% $Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
 
-\todo{fix these tables}
 
-	\begin{table*}\centering
+	\begin{table*}[htp]\centering
 		%\hskip-4.0cm
 		\caption{Master results table comparing results for all of the classifiers run in this work.
 			For each task and classifier, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
@@ -390,16 +389,13 @@ The table shows the best-fit classifier's performance across three scores on the
 			$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96\\
 			$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 \\
 			$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41  \\
-
+			
 			\bottomrule
 		\end{tabular}
-	\end{table*}
-
-	%\addtocounter{table}{-1} % This dirty hack will fake both tables as if they were the same one.
-
-\medskip
-
-	\begin{table*}\centering
+		
+		%\addtocounter{table}{-1} % This dirty hack will fake both tables as if they were the same one.
+		
+		\medskip
 		%\hskip-4.0cm
 		\ra{1.3}
 		%\hskip-4.0cm
@@ -411,15 +407,12 @@ The table shows the best-fit classifier's performance across three scores on the
 			$Logistic \ Regression$     & 0.714 & 0.726 & 0.248 & 119 \\
 			$Random \ Forest$            & 0.79  & 0.776 & 0.278 & 45  \\
 			$Gradient \ Tree \ Boosting$ & 0.838 & 0.819 & 0.291 & 54 \\
-
+			
 			\bottomrule
-		\end{tabular}
-	\end{table*}
-
-
-\medskip
-
-	\begin{table*}\centering
+		\end{tabular}	
+		
+		\medskip
+		
 		%\hskip-4.0cm
 		\ra{1.3}
 		%\hskip-4.0cm
@@ -431,13 +424,9 @@ The table shows the best-fit classifier's performance across three scores on the
 			$Logistic \ Regression$     & 0.705 & 0.754 & 0.307 & 115 \\
 			$Random \ Forest$            &  0.792 & 0.845 & 0.346 & 21 \\
 			$Gradient \ Tree \ Boosting$ & 0.811 & 0.855 & 0.359 & 33 \\
-
+			
 			\bottomrule
 		\end{tabular}
-	\end{table*}
-
-
-	\begin{table*}\centering
 		%\hskip-4.0cm
 		\ra{1.3}
 		%\hskip-4.0cm
@@ -449,7 +438,7 @@ The table shows the best-fit classifier's performance across three scores on the
 			$Logistic \ Regression$     & 0.883 & 0.85  & 0.331 & 106 \\
 			$Random \ Forest$            & 0.898 & 0.853 & 0.393 & 19 \\
 			$Gradient \ Tree \ Boosting$ & 0.885 & 0.873 & 0.384 & 47 \\
-
+			
 			\bottomrule
 		\end{tabular}
 	\end{table*}
