--- a/trash.tex
+++ b/trash.tex
@@ -288,15 +288,15 @@ eprint=false
 \bigskip
 
 
-	\begin{table*}\centering
+	\begin{table*}[htp]\centering
 		%\hskip-4.0cm
 		\caption{Master results table comparing results for all of the classifiers run in this work.
-			For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
+			For each task and classifier, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
 		\ra{1.3}
 		%\hskip-4.0cm
 		\begin{tabular}{@{}rrrrrc@{}} \toprule
 			&  \multicolumn{4}{c}{Problem 1} \\
-			\cmidrule{2-5} 
+			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
 			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  \\
 			$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96\\
@@ -305,6 +305,57 @@ eprint=false
 			
 			\bottomrule
 		\end{tabular}
+		
+		%\addtocounter{table}{-1} % This dirty hack will fake both tables as if they were the same one.
+		
+		\medskip
+		%\hskip-4.0cm
+		\ra{1.3}
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rrrrrc@{}} \toprule
+			&  \multicolumn{4}{c}{Problem 2} \\
+			\cmidrule{2-5}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
+			$Naive Bayes$               & 0.64  & 0.61  & 0.31  & 2   \\
+			$Logistic \ Regression$     & 0.714 & 0.726 & 0.248 & 119 \\
+			$Random \ Forest$            & 0.79  & 0.776 & 0.278 & 45  \\
+			$Gradient \ Tree \ Boosting$ & 0.838 & 0.819 & 0.291 & 54 \\
+			
+			\bottomrule
+		\end{tabular}	
+		
+		\medskip
+		
+		%\hskip-4.0cm
+		\ra{1.3}
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rrrrrc@{}} \toprule
+			&  \multicolumn{4}{c}{Problem 3} \\
+			\cmidrule{2-5}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
+			$Naive Bayes$               & 0.65  & 0.63  & 0.45  & 1  \\
+			$Logistic \ Regression$     & 0.705 & 0.754 & 0.307 & 115 \\
+			$Random \ Forest$            &  0.792 & 0.845 & 0.346 & 21 \\
+			$Gradient \ Tree \ Boosting$ & 0.811 & 0.855 & 0.359 & 33 \\
+			
+			\bottomrule
+		\end{tabular}
+		%\hskip-4.0cm
+		\ra{1.3}
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rrrrrc@{}} \toprule
+			&  \multicolumn{4}{c}{Problem 4} \\
+			\cmidrule{2-5}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
+			$Naive Bayes$               & 0.85  & 0.76  & 0.62 & 1 \\
+			$Logistic \ Regression$     & 0.883 & 0.85  & 0.331 & 106 \\
+			$Random \ Forest$            & 0.898 & 0.853 & 0.393 & 19 \\
+			$Gradient \ Tree \ Boosting$ & 0.885 & 0.873 & 0.384 & 47 \\
+			
+			\bottomrule
+		\end{tabular}
 	\end{table*}
+
+
 
 \end{document}
